--- a/111652011_Yi-Le/HW0519/C15S05Q8.md
+++ b/111652011_Yi-Le/HW0519/C15S05Q8.md
@@ -2,4 +2,41 @@
 
 ![image](https://github.com/user-attachments/assets/f8c1eb02-f655-4899-bf28-fefbb2b8afb5)
 
-## Solution
+## Solution of a
+
+|(1)10~19|(2)20~39|(3)40~59|(4)60~69|
+|--------|--------|--------|--------|
+|    21  |     8  |    39  |    18  |
+|  29.5  |    15  |  10.5  |    21  |
+|  12.5  |  29.5  |   5.5  |    34  |
+|    15  |    24  |  29.5  |  37.5  |
+|    40  |     3  |    18  |     3  |
+|    36  |    18  |  12.5  |     1  |
+|  29.5  |     8  |    23  |  10.5  |
+|    21  |    34  |    34  |     8  |
+|  37.5  |     3  |    15  |  29.5  |
+|   5.5  |  25.5  |  29.5  |  25.5  |
+
+$T_1 = 21 + 29.5 + 12.5 + 15 + 40 + 36 + 29.5 + 21 + 37.5 + 5.5 = 247.5$  
+$T_2 = 8 + 15 + 29.5 + 24 + 3 + 18 + 8 + 34 + 3 + 25.5 = 168$  
+$T_3 = 39 + 10.5 + 5.5 + 29.5 + 18 + 12.5 + 23 + 34 + 15 + 29.5 = 216.5$   
+$T_4 = 18 + 21 + 34 + 37.5 + 3 + 1 + 10.5 + 8 + 29.5 + 25.5 = 188$  
+
+$H_0$ : Four distributions are identical  
+$H_a$ : At least one distribution is different
+
+$\alpha = 0.01$  
+$H = \frac{12}{20(20+1)} \* (\frac{247.5^2}{10} + \frac{168^2}{10} + \frac{216.5^2}{10} + \frac{188^2}{10}) - 3(40+1) \approx 2.6316$  
+$\chi^2_{3, 0.01} = 11.3449$  
+Thus, the rejection region is $\\{H: H > 11.3449\\}$  
+Since $2.6316 < 11.3449$, $H_0$ is not rejected i.e. there is not sufficient evidence to indicate that at least one distribution is different.
+
+## Solution of b
+
+$p-value = P(\chi^2 > 2.6316) \approx 0.452$  
+
+## Solution of c
+
+Since $p-value = 0.468 > 0.01$, $H_0$ is not rejected.  
+Thus, the results of F-test and H-test are same.  
+The two p-values are very close, thus, the data may not have severely violated the assumptions of normality and homogeneity of variances.  
