--- a/112705070_YuHanWang/HW0512/C15S01Q13.md
+++ b/112705070_YuHanWang/HW0512/C15S01Q13.md
@@ -1,1 +1,19 @@
 <img width="450" alt="image" src="https://github.com/user-attachments/assets/9dca8e3a-400e-4ba0-8df2-8ecd81a64928" />
+
+$\ H_0: D_1=D_2 \$
+
+$\ H_a:D_1 \ne D_2 \$
+
+$\ T_1=15+11+18+10+14+12+17+16+13 =126 \$
+
+$\ T_1^*=n_1+(n_1+n_2+1)-T_1=9(9+9+1)-126 =45 \$
+
+$\ T_{9,9} = 62 \$
+
+$\ min(T_1,T_1^*)=min(126,45) = 45 \$
+
+$\ \because 45<62 \$
+
+$\therefore$ reject $H_0$
+
+$\Rightarrow$ there is siginificant difference between $D_1$ and $D_2$
