--- a/111652011_Yi-Le/HW0526/C15S06Q10.md
+++ b/111652011_Yi-Le/HW0526/C15S06Q10.md
@@ -6,6 +6,29 @@
 
 ## Solution of a
 
+The randomized block design.
+
 ## Solution of b
 
+For the scatter plot of residuals and antibiotic, it's clear that the variance of antibiotic 1 and antibiotic 2 are different.  
+Thus, the common variance assumption is not satisfied.
+
 ## Solution of c
+
+|antibiotic| T1| T2| T3| T4|
+|----------|---|---|---|---|
+|  Child 1 | 2 | 1 | 4 | 3 |
+|  Child 2 | 2 | 3 | 1 | 4 |
+|  Child 3 | 3 | 1 | 2 | 4 |
+|  Child 4 | 2 | 4 | 1 | 3 |
+|  Child 5 | 3 | 4 | 2 | 1 |
+
+$T_1 = 12$  
+$T_2 = 13$  
+$T_3 = 10$  
+$T_4 = 15$  
+$b = 5 \quad k = 4$  
+$H_0$ : The four distributions are identical  
+$H_a$ : At least one distribution is different  
+$\alpha = 0.05$  
+
