--- a/111652011_Yi-Le/HW0526/C15S06Q10.md
+++ b/111652011_Yi-Le/HW0526/C15S06Q10.md
@@ -31,4 +31,6 @@ $b = 5 \quad k = 4$
 $H_0$ : The four distributions are identical  
 $H_a$ : At least one distribution is different  
 $\alpha = 0.05$  
-
+$F = \frac{12}{8*4\*5} \sum (12^2+13^2+10^2+15^2) - 3\*8\*5 =1.56$  
+The rejection region is $\\{F: F > \chi^2_{0.05, 3}\\} = \\{F: F > 7.81473\\}$  
+Since $1.56 < 7.81473$, $H_0$ is not rejected i.e. there is not significant evidence to indicate that at least one distribution is different.  
