--- a/112705070_YuHanWang/HW0512/C15S02Q04.md
+++ b/112705070_YuHanWang/HW0512/C15S02Q04.md
@@ -1,1 +1,23 @@
 <img width="450" alt="image" src="https://github.com/user-attachments/assets/371cf247-e3bd-45e1-aa40-c196a8a4a3d5" />
+
+$\ H_0: P(A>B) = p=0.5 \$
+
+$\ H_a:P(A>B) =p \ne 0.5 \$
+
+| Pair | Population 1 | Population 2 | Diff |
+|------|--------|------|------|
+| 1   | 8.9      | 8.8    |+
+| 2   | 8.1      | 7.4  |+
+| 3   | 9.3      | 9.0  |+
+| 4   | 7.7      | 7.8    | -
+| 5   | 10.4      | 9.9    |+
+| 6   | 8.3      | 8.1    |+
+| 7   | 7.4      | 6.9  |+
+
++:6,-:1
+
+$\ 2P(X\ge 6)=P(X=6)+P(X=7)=2(\binom{7}{6}(0.5)^6(0.5)^1+\binom{7}{7}(0.5)^7)=2 \times 0.0625=0.125 \$
+
+$\ \because p=0.125>\alpha=0.1 \$
+
+$\therefore$ non-reject $H_0$
