--- a/112705070_YuHanWang/HW0512/C15S02Q11.md
+++ b/112705070_YuHanWang/HW0512/C15S02Q11.md
@@ -1,1 +1,24 @@
 <img width="450" alt="image" src="https://github.com/user-attachments/assets/3b1027c3-1ce6-4dba-a2f3-3e5cc343c865" />
+
+## a
+$\ n=22-2=20 \$
+
+$\ RR:{X\leq 5|X \geq 15} \$
+
+## b
+$\ Z=\frac{x-np}{sqrt{np(1-p)}} = \frac{11-0.5*20}{0.5\sqrt{20}} \approx 0.45 \$
+
+$\ RR: \frac{x-0.5*20}{0.5*\sqrt{20}}>Z_0.025=1.96 \$
+or
+$\ \frac{x-0.5*20}{0.5\sqrt{20}}>-Z_0.025=-1.96 \$
+
+$\ \Rightarrow x>1.96*0.5*\sqrt{20}+10 \$
+or
+$\ x<-1.96*0.5*sqrt{20}+10 \$
+
+$\ \Rightarrow x>14.3827 \$
+or
+$\ x<5.6173 \$
+
+## c
+since x is a integer, the results from a and b would be the same.
