--- a/111652011_Yi-Le/HW0526/C15S06Q11.md
+++ b/111652011_Yi-Le/HW0526/C15S06Q11.md
@@ -4,4 +4,29 @@
 
 ## Solution of a
 
+|Location| 1 | 2 | 3 | 4 | 5 | 6 |
+|--------|---|---|---|---|---|---|
+|    A   | 4 | 2 | 3 | 3 | 3 | 3 |
+|    B   | 1 | 3 | 2 | 2 | 2 | 2 |
+|    C   | 5 | 4 | 4 | 4 | 4 | 5 |
+|    D   | 3 | 5 | 5 | 5 | 5 | 4 |
+|    E   | 2 | 1 | 1 | 1 | 1 | 1 |
+
+$T_A = 18$  
+$T_B = 12$  
+$T_C = 26$  
+$T_D = 27$  
+$T_E = 7$  
+
+$H_0$ : The distribution of the yields for the five different varieties of wheat are identical.  
+$H_a$ : At least one distribution is different.  
+$\alpha = 0.05$  
+$F_r = \frac{12}{6x5x6} \times (18^2+12^2+26^2+27^2+7^2)-3 \times 6 \times 6 = 20.133$  
+$\chi^2_{4, 0.05} = 9.49$  
+Thus, the rejection region is $\\{F_r: F_r > 9.49\\}$  
+Since $20.133 > 9.49$, $H_0$ is rejected i.e. there is sufficient evidence to indicate adifference in the yields for the five different varieties of wheat.
+
 ## Solution of b
+
+Since $p-value = 0.000 < 0.05$, $H_0$ is rejected.  
+Thus, the result is same as part a.
