--- a/111652011_Yi-Le/HW0526/C15S07Q11.md
+++ b/111652011_Yi-Le/HW0526/C15S07Q11.md
@@ -4,4 +4,29 @@
 
 ## Solution of a
 
+| Voter | Rating(x) | Rank x | Distance (y) | Rank y| difference |
+|-------|-----------|--------|--------------|-------|------------|
+|   1   | 12        |  7.5   |      75      |   3   |     4.5    |
+|   2   | 7         |    4   |     165      |   7   |      -3    |
+|   3   | 5         |    3   |     300      |  12   |      -9    |
+|   4   | 19        |   12   |      15      |   1   |      11    |
+|   5   | 17        |   10   |     180      |   8   |       2    |
+|   6   | 12        |  7.5   |     240      |  11   |    -3.5    |
+|   7   | 9         |    6   |     120      |   4   |       2    |
+|   8   | 18        |   11   |      60      |   2   |       9    |
+|   9   | 3         |    1   |     230      |  10   |      -9    |
+|  10   | 8         |    5   |     200      |   9   |      -4    |
+|  11   | 15        |    9   |     130      | 5.5   |     3.5    |
+|  12   | 4         |    2   |     130      | 5.5   |    -3.5    |
+
+$\sum d^2 = 4.5^2 + (-3)^2 + (-9)^2 + 11^2 + 2^2 + (-3.5)^2 + 2^2 + 9^2 + (-9)^2 + (-4)^2 + 3.5^2 + (-3.5)^2 = 454$  
+$r_s = 1 - \frac{6 \sum d^2}{n(n^2 - 1)} = 1 - \frac{6(454)}{12(12^2 - 1)} \approx -0.5874$  
+
 ## Solution of b
+
+$H_0: \rho_s = 0$  
+$H_a: \rho_s < 0$  
+$\alpha = 0.05 \quad n = 12$  
+$r = 0.497$  
+Thus, the rejection region is $\\{r: r \leq -0.497\\}$  
+Since $-0.5874 < -0.497$, $H_0$ is rejected i.e. there is sufficient evidence to indicate a negative rank correlation between rating and distance.
