--- a/111652011_Yi-Le/HW0526/C15S07Q11.md
+++ b/111652011_Yi-Le/HW0526/C15S07Q11.md
@@ -19,7 +19,7 @@
 |  11   | 15        |    9   |     130      | 5.5   |     3.5    |
 |  12   | 4         |    2   |     130      | 5.5   |    -3.5    |
 
-$\sum d^2 = 4.5^2 + (-3)^2 + (-9)^2 + 11^2 + 2^2 + (-3.5)^2 + 2^2 + 9^2 + (-9)^2 + (-4)^2 + 3.5^2 + (-3.5)^2 = 454$  
+$\sum d^2 = 454$  
 $r_s = 1 - \frac{6 \sum d^2}{n(n^2 - 1)} = 1 - \frac{6(454)}{12(12^2 - 1)} \approx -0.5874$  
 
 ## Solution of b
