--- a/111652011_Yi-Le/HW0526/C15S07Q12.md
+++ b/111652011_Yi-Le/HW0526/C15S07Q12.md
@@ -4,4 +4,28 @@
 
 ## Solution of a
 
+x: Years of Competitive Running  
+y: 10-Kilometer Finish Time
+
+| Runner | Rank x | Rank y | difference(d) |
+|--------|--------|--------|---------------|
+|    1   |    7   |    1   |       6       |
+|    2   |    9   |    2   |       7       |
+|    3   |  3.5   |    3   |     0.5       |
+|    4   |    6   |    4   |       2       |
+|    5   |    8   |    5   |       3       |
+|    6   |    5   |    6   |      -1       |
+|    7   |    2   |    7   |      -5       |
+|    8   |  3.5   |    8   |    -4.5       |
+|    9   |    1   |    9   |      -8       |
+
+$r_s=1 - frac{6}{n(n^2-1)}\sum{d_i^2} = -0.7375$  
+
 ## Solution of b
+
+$H_0: \rho_s = 0$  
+$H_a: \rho_s < 0$  
+$\alpha = 0.05$  
+$r_{9, 0.05} = -0.6$  
+Thus, the rejection region is $\\{r: r < -0.6\\}$  
+Since $-0.7375 < -0.6$, $H_0$ is rejected i.e. the data provide evidence to indicate a significant rank correlation between the two variables.
