--- a/111652011_Yi-Le/HW0526/C15S07Q12.md
+++ b/111652011_Yi-Le/HW0526/C15S07Q12.md
@@ -19,7 +19,7 @@ y: 10-Kilometer Finish Time
 |    8   |  3.5   |    8   |    -4.5       |
 |    9   |    1   |    9   |      -8       |
 
-$r_s=1 - frac{6}{n(n^2-1)}\sum{d_i^2} = -0.7375$  
+$r_s=1 - \frac{6}{n(n^2-1)}\sum{d_i^2} = -0.7375$  
 
 ## Solution of b
 
