--- a/112705070_YuHanWang/HW0512/C15S02Q13.md
+++ b/112705070_YuHanWang/HW0512/C15S02Q13.md
@@ -1,2 +1,16 @@
 <img width="350" alt="image" src="https://github.com/user-attachments/assets/f08dbe2b-8c78-4b39-a340-ae4852d91dbf" />
 <img width="350" alt="image" src="https://github.com/user-attachments/assets/1de807db-2559-4f7e-bbab-aa252bc7ab98" />
+
+## a
++:2,-:8
+
+Rejection Region
+$\ =P(X \leq 2) or P(X \geq 8) \$
+
+$\ 2P(X \leq 2)=0.11>0.05 \$
+
+$\therefore$ non-reject $H_0$
+
+## b
+because the recovery rates are percentages (bounded between 0-100%) and may not follow a normal distribution, violating a key assumption of the t-test.
+
