--- a/112705070_YuHanWang/HW0512/C15S04Q09.md
+++ b/112705070_YuHanWang/HW0512/C15S04Q09.md
@@ -1,1 +1,25 @@
 <img width="450" alt="image" src="https://github.com/user-attachments/assets/6c470230-b61b-4917-90f6-38dbcde9d538" />
+
+## a
+| Pair Number | difference | \|d\| | rank |
+|----------|----------|----------------|------|
+| 1        | 0.1      | 0.1            | 1.5    |
+| 2        | 0.7      | 0.7            | 7    |
+| 3        | 0.3      | 0.3            | 4    |
+| 4        | -0.1     | 0.1            | 1.5    |
+| 5        | 0.5      | 0.5            | 5.5  |
+| 6        | 0.2      | 0.2            | 3    |
+| 7        | 0.5      | 0.5            | 5.5  |
+
+$\ T^+ = 26.5, T^-=1.5 \$
+
+$\ min(T^+,T^-) = min(26.5,1.5)=1.5 \$
+
+ $\ T_0 = 2>1.5 \$
+
+ $\therefore$ reject $H_0$
+
+ 
+## b
+one use the sign test and one use the signed-rank test, but the result is different.
+This is due to the low statistical power of sign test.
