--- a/112705070_YuHanWang/HW0519/C15S04Q11.md
+++ b/112705070_YuHanWang/HW0519/C15S04Q11.md
@@ -1,1 +1,24 @@
 <img width="450" alt="image" src="https://github.com/user-attachments/assets/66ae4b5b-132e-4ee7-a4fa-73e33feb197b" />
+
+## a
+| Month | A  | B  | Difference ($d = A - B$) | $\lvert d  \rvert$ | Rank | Sign-Rank |
+|------|----|----|---------------------|--------|------------|--------------|
+| 1    | 3  | 7  | -4                  | 4      | 5          | -5           |
+| 2    | 14 | 12 | 2                   | 2      | 3          | +3.5         |
+| 3    | 7  | 9  | -2                  | 2      | 3          | -3.5         |
+| 4    | 10 | 15 | -5                  | 5      | 6          | -6           |
+| 5    | 9  | 12 | -3                  | 3      | 4          | -4           |
+| 6    | 6  | 6  | 0                   | —      | —          | —            |
+| 7    | 13 | 12 | 1                   | 1      | 1.5        | +1.5         |
+| 8    | 6  | 5  | 1                   | 1      | 1.5        | +1.5         |
+| 9    | 7  | 13 | -6                  | 6      | 7          | -7           |
+
+$\ T^+=29.5,T^-=6.5 \$
+
+$\ T_0=4<6.5 \$
+
+$\therefore$ non-reject $H_0$
+
+
+## b
+the usage frequency on each machine may be different.
