--- a/112705070_YuHanWang/HW0519/C15S04Q15.md
+++ b/112705070_YuHanWang/HW0519/C15S04Q15.md
@@ -1,1 +1,39 @@
 <img width="450" alt="image" src="https://github.com/user-attachments/assets/6a456f31-fd62-4fb9-8a97-0986e507b746" />
+
+## a
+three testing procedures:
+-  paired y-test
+-  wilcoxon signed-rank test
+-  sign test
+
+Assumption for paired t-test:
+-  the differences between pairs are normally distributed
+-  the observations are paired and independent
+-  the data is measured on at lease on interval scale.
+
+Checking assumptions:
+-  the differences appear to be mostly positive
+-  there are some extreme difference
+
+$\Rightarrow$ The data doesn't fullt satisfy the assumption.
+
+## b
+sign test:
+$\ T^+=20,T^-=0 \$
+
+$\ 2P(X\leq 0) \approx 0<0.05 \$
+
+$\therefore$ reject $H_0$
+
+
+sign-rank test:
+$\ T^+=210,T^-=0 \$
+
+$\ min(T^+,T^-)=min(210,0)=0 \$
+
+$\ T_0=52>0 \$
+
+$\therefore$ reject $H_0$
+
+## c
+both test get the same conclusion
