--- a/112705070_YuHanWang/HW0519/C15S05Q6.md
+++ b/112705070_YuHanWang/HW0519/C15S05Q6.md
@@ -1,1 +1,17 @@
 <img width="450" alt="image" src="https://github.com/user-attachments/assets/9079b544-b0d1-4130-88de-aa65ce2dde61" />
+
+$\ T_1=13+20+16+19+18=86 \$
+
+$\ T_2=16+10+5+13+16=60 \$
+
+$\ T_3=2+7.5+10+13+7.5=40 \$
+
+$\ T_4=2+10+5+5+2=24 \$
+
+$\ H^*=\frac{12}{n(n+1)}\sum \frac{T_i^2}{n_i}-3(n+1) = \frac{12}{20\times 21} \times (\frac{86^2+60^2+40^2+24^2}{5})-3 \times 21 =12.2686 \$
+
+$\ \because X^2_{3,0.01}=11.3449<12.2686 \$
+
+$\therefore$ reject $H_0$
+
+$\Rightarrow$ There is sufficient evidence to indicate that there is a difference in the four instructural group
