--- a/112705070_YuHanWang/HW0519/C15S05Q8.md
+++ b/112705070_YuHanWang/HW0519/C15S05Q8.md
@@ -1,1 +1,37 @@
 <img width="450" alt="image" src="https://github.com/user-attachments/assets/a97797fa-f805-4ef7-a40f-177783ddae5c" />
+
+## a
+$\ T_1=263 \$
+
+$\ T_2 = 210 \$
+
+$\ T_3=228 \$
+
+$\ T_4=239 \$
+
+$\ H^*=\\frac{12}{N(N+1)} \sum(\frac{T_i^2}{n_i}) -3(n+1)=\frac{12}{40(40+1)} (\frac{263^2}{10}+\frac{210^2}{10}+\frac{228^2}{10}+\frac{239^2}{10})-3(40+1) \approx 39.6 \$
+
+$\ X^2_{3,0.01} = 11.345 \$
+
+$\ \because 39.6>11.345 \$
+
+$\therefore$ reject $H_0$
+
+## b
+p-value 
+$\ \approx 0.00000001< \alpha=0.01 \$
+
+$\rightarrow$ reject $H_0$
+
+## C
+$\ SST=SSB+SSQ=89.45+800=889.45 \$
+
+$\ MSB = \frac{SSB}{k-1}=\frac{89.45}{3} = 29.82 \$
+
+$\ MSW=\frac{SSW}{N-k} = \frac{800}{36}=22.22 \$
+
+$\ F=\frac{MSB}{MSW}=\frac{29.82}{22.22} \approx 1.34<4.38 \$
+
+$\therefore$ non-reject $H_0$
+
+the different result of two test may occur because the heart rate data violates ANOVA's notmality assumption. 
