--- a/史上最強統計學詳解/C10S07Q12.md
+++ b/史上最強統計學詳解/C10S07Q12.md
@@ -46,3 +46,5 @@
 ## 6. 作出結論 (Conclusion)
 - 計算得 \(|-2.39| = 2.39 > 2.365\)，因此我們**拒絕 \(H_0\)**。
 - **結論**：數據顯示兩種刺激的反應時間存在顯著差異。
+
+reviewed by 黃馨霈 20250602 $\textbf{\textcolor{red}{score: 100}}$
