--- a/史上最強統計學詳解/C15S06Q10.md
+++ b/史上最強統計學詳解/C15S06Q10.md
@@ -58,3 +58,4 @@ $$
 
 6. Because $F_r=1.56$ does not fall into the rejection region, $H_0$ is not rejected, which means that there is no significant difference in the distributions of reponses to the tastes of the four antibiotics.
 
+reviewed by 黃馨霈 20250602 $\textbf{\textcolor{red}{score: 100}}$
