--- a/史上最強統計學詳解/C15S06Q11.md
+++ b/史上最強統計學詳解/C15S06Q11.md
@@ -28,3 +28,4 @@ That means at least one of the distribution of the yields will be different.
 In order to get the p-value of the $F_r$ that we got from the previous problem, we look it up in the p-value to $F_r$ chart.  
 We will know that the p-value of $X^2_{4, 0.01}$ is 13.28 and 13.28<20.133, which means the p-value we're looking for is < 0.01.  
 Compare to the F and p-value the problem gave us, we know that both of these data state that we are rejecting $H_0$, so at least one of the distribution of the yields will not be the same.  
+reviewed by 黃馨霈 20250602 $\textbf{\textcolor{red}{score: 100}}$
