--- a/史上最強統計學詳解/C15S07Q11.md
+++ b/史上最強統計學詳解/C15S07Q11.md
@@ -58,3 +58,4 @@ $$
 
 There is sufficient evidence to support the claim of a **negative correlation** between rating and distance.
 
+reviewed by 黃馨霈 20250602 $\textbf{\textcolor{red}{score: 100}}$
