--- a/史上最強統計學詳解/C15S07Q12.md
+++ b/史上最強統計學詳解/C15S07Q12.md
@@ -35,3 +35,5 @@ $\ H_0 \$
 
 $\ \Rightarrow \$
 The data indicate a significant negative correlation between years of competitive running experience and 10-kilometer finish time.
+
+reviewed by 黃馨霈 20250602 $\textbf{\textcolor{red}{score: 100}}$
